docs: finish withServerAuth intial draft

--- a/src/pages/reference-js/overview.mdx
+++ b/src/pages/reference-js/overview.mdx
@@ -1,6 +1,6 @@
 # Clerk
 
-###### The Clerk object is the core of the ClerkJS SDK.
+The Clerk object is the core of the ClerkJS SDK.
 
 ## Overview[](https://clerk.com/docs/reference/clerkjs/clerk#overview)
 
@@ -11,7 +11,7 @@ The `Clerk` object is always available via `window.Clerk`.
 ## Attributes[](https://clerk.com/docs/reference/clerkjs/clerk#attributes)
 
 | Name    | Type                       | Description                                                                                                                              |
-| ------- | -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
+|---------|----------------------------|------------------------------------------------------------------------------------------------------------------------------------------|
 | client  | Client                     | The `Client` object for the current window.                                                                                              |
 | session | session / null / undefined | The `Client` object for the current window.                                                                                              |
 | user    | User / null / undefined    | A shortcut to Session.user which holds the currently active User object. If the session is null or undefined, the user field will match. |
@@ -43,13 +43,13 @@ Please note that the `session` and `user` object have a special relationship
 **Parameters**
 
 | Name     | Type                           | Description                                             |
-| -------- | ------------------------------ | ------------------------------------------------------- |
+|----------|--------------------------------|---------------------------------------------------------|
 | listener | (resources: Resources) => void | A function to be called when the Client object changes. |
 
 **Returns**
 
 | Type       | Description                                                                          |
-| ---------- | ------------------------------------------------------------------------------------ |
+|------------|--------------------------------------------------------------------------------------|
 | () => void | This method returns a function that can be used to clean up the registered listener. |
 
 ### authenticateWithMetamask(params)[](https://clerk.com/docs/reference/clerkjs/clerk#authenticate-with-metamask-params)
@@ -61,7 +61,7 @@ Starts an authentication flow that uses the Metamask browser extension to authen
 **Parameters**
 
 | Type                            | Description                                                                                                    |
-| ------------------------------- | -------------------------------------------------------------------------------------------------------------- |
+|---------------------------------|----------------------------------------------------------------------------------------------------------------|
 | AuthenticateWithMetamaskParams​ | ​​These props allow you to define the URL where the user should be redirected to on successful authentication. |
 
 **Returns**
@@ -159,12 +159,13 @@ Take a look at the function parameters description below for more usage details.
 **Parameters**
 
 | Name   | Type                              | Description                                                                                                                                                                                                                                                                                                                    |
-| ------ | --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+|--------|-----------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | params | HandleMagicLinkVerificationParams | These props allow you to define the URLs where the user should be redirected to on successful verification and completed sign in or sign up attempt pending sign in or sign up attempt. If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
 
 **Returns**
-Type | Description |
-\------------------------------ | ------------------------------------------------------- |
+
+| Type           | Description                                                                                                                                     |
+|----------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
 | MagicLinkError | This method will throw a MagicLinkError if the magic link verification failed or the link expired. Check the error's code property for details. |
 
 ### isReady()[](https://clerk.com/docs/reference/clerkjs/clerk#is-ready)
@@ -178,9 +179,10 @@ Returns **true** when the [ClerkJS](https://clerk.com/docs/reference/clerk-re
 This method accepts no parameters.
 
 **Returns**
-Type | Description |
-\------------------------------ | ------------------------------------------------------- |
-boolean | This method will return true when the Clerk object is ready, false otherwise. |
+
+| Type    | Description                                                                   |
+|---------|-------------------------------------------------------------------------------|
+| boolean | This method will return true when the Clerk object is ready, false otherwise. |
 
 ### load(options?)[](https://clerk.com/docs/reference/clerkjs/clerk#load-options)
 
@@ -193,12 +195,13 @@ It is absolutely necessary to call this method before using the `Clerk` object
 **Parameters**
 
 | Name    | Type             | Description                                                                       |
-| ------- | ---------------- | --------------------------------------------------------------------------------- |
+|---------|------------------|-----------------------------------------------------------------------------------|
 | options | ComponentOptions | Configuration and options for initializing the Clerk object and Clerk Components. |
 
 **Returns**
-Type | Description |
-\------------------------------ | ------------------------------------------------------- |
+
+| Type    | Description                                                                             |
+|---------|-----------------------------------------------------------------------------------------|
 | boolean | This method will return **true** when the `Clerk` object is ready, **false** otherwise. |
 
 ### mountSignIn(node, nodeProps?)[](https://clerk.com/docs/reference/clerkjs/clerk#mount-sign-in-node-node-props)
@@ -210,6 +213,6 @@ Renders a [`<SignIn/>`](https://clerk.com/docs/component-reference/sign-in) co
 **Parameters**
 
 | Name       | Type           | Description                                                           |
-| ---------- | -------------- | --------------------------------------------------------------------- |
+|------------|----------------|-----------------------------------------------------------------------|
 | node       | HTMLDivElement | An HTML `<div/>` element which will render the `<SignIn/>` component. |
 | nodeProps? | SignInProps    | Additional props that will be passed to the `<SignIn/>` component.    |
