chore: fix technical inaccuracy

--- a/src/pages/reference-remix/clerk-catch-boundary.mdx
+++ b/src/pages/reference-remix/clerk-catch-boundary.mdx
@@ -70,7 +70,7 @@ export const CatchBoundary = ClerkCatchBoundary(YourBoundary);
     {
       cells: [
         <code>RootCatchBoundary?</code>,
-        <code>React.ReactNode</code>,
+        <code>React.ComponentType</code>,
         `A optional component used as your application boundary.`,
       ],
     }
