--- a/src/pages/users/authentication-providers/apple.mdx
+++ b/src/pages/users/authentication-providers/apple.mdx
@@ -4,19 +4,18 @@ How to setup social connection with Apple
 
 ## Overview
 
-In this guide, we'll see how we can add **Sign In with Apple** to your Clerk instance. To make development flow as smooth as possible, Clerk uses pre-configured configuration profiles - steps are needed to your part (other than enabling the provider from Dashboard). For production instances, the process for Apple is a bit more complicated compared to other providers, but don't worry - we're going to guide you through it step-by-step.
+In this guide, we'll see how we can add **Sign In with Apple** to your Clerk instance.To make development flow as smooth as possible,  Clerk uses pre-configured configuration profiles - steps are needed to  your part (other than enabling the provider from Dashboard). For  production instances, the process for Apple is a bit more complicated  compared to other providers, but don't worry - we're going to guide you  through it step-by-step.
 
-> The purpose of this guide is to help you create an Apple App that can be used with Clerk's OAuth implementation, for the purpose of integrating your application with [Sign in with Apple](https://developer.apple.com/sign-in-with-apple/). If you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+> The purpose of this guide is to help you create an Apple App that can be  used with Clerk's OAuth implementation, for the purpose of integrating  your application with [Sign in with Apple](https://developer.apple.com/sign-in-with-apple/). If you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
 
 ## Before you start
 
-- You need to create a Clerk Application in your Clerk Dashboard. For more information, check out our Set up your application guide.
-
-- You need to have an Apple Developer account. To create one, visit the Apple Developer portal.
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to have an Apple Developer account. To create one, visit the [Apple Developer portal](https://developer.apple.com/).
 
 ## Configuring Apple social connection
 
-To configure Apple SSO in your Clerk instance, we'll need to retrieve (4) configuration values from the Apple Developer portal and enter them into your instance settings in Clerk Dashboard:
+To configure Apple SSO in your Clerk instance, we'll need to retrieve (4)  configuration values from the Apple Developer portal and enter them into your instance settings in Clerk Dashboard:
 
 1. the Apple Team ID
 2. the Apple Services ID
@@ -36,7 +35,7 @@ First, sign in to the Apple Developer portal and from the sidebar click on **Cer
 
 ### Retrieving the Apple Team ID
 
-The first thing we have to do is create an **App ID**. You can think of it like a top-level container that logically groups all of the resources we'll have to create for your application (keypairs, services etc.)
+The first thing we have to do is create an **App ID**. You can think of it like a top-level container that logically groups  all of the resources we'll have to create for your application  (keypairs, services etc.)
 
 From the sidebar on the left, click on **Identifiers** and make sure that from the dropdown at the top-right corner, the **App IDs** option is selected. Then, click on the blue plus icon.
 
@@ -50,7 +49,7 @@ On the next page, you'll be prompted to select a **type** for your application. 
 
 ![](./apple/a2e4646c58e07e18c390542f24c16a343fca8a71-1242x405.png)
 
-In the next screen, you'll have to fill in a description for your App ID and a Bundle ID. None of these matter for the purposes of this guide, but it's good to pick something descriptive.
+In the next screen, you'll have to fill in a description for your App ID  and a Bundle ID. None of these matter for the purposes of this guide,  but it's good to pick something descriptive.
 
 ![](./apple/d9228d13727c39cd3f1230b33e02dfdf0291f06d-1181x616.png)
 
@@ -84,19 +83,19 @@ After the registration is finished, go back to configure the newly-created Servi
 
 ![](./apple/b456dab662e7e6cc66be45818447e74a27265e97-1188x428.png)
 
-This configuration screen is where you tell Apple what domain and redirect URIs your application will use. Choose the App ID we created before, and in the domain enter `clerk.<your-domain>`.
+This configuration screen is where you tell Apple what domain and redirect  URIs your application will use. Choose the App ID we created before, and in the domain enter `clerk.<your-domain>`.
 
-Next, go to Clerk's [Dashboard](https://dashboard.clerk.com/), select your application and instance and go to **Authentication -> Social Connections**. Click the gear icon next to the Apple provider and copy the **Authorized redirect URI** value. Paste the value into the **Return URLs** in Apple Developer Portal and click **Next**.
+Next, go to Clerk's [Dashboard](https://dashboard.clerk.dev/), select your application and instance and go to **Authentication -> Social Connections**. Click the gear icon next to the Apple provider and copy the **Authorized redirect URI** value. Paste the value into the **Return URLs** in Apple Developer Portal and click **Next**.
 
 ![](./apple/48549b1a0c948a88c0877b730fd689025b9dfc86-704x801.png)
 
 ### Retrieving the Apple Key ID and private key
 
-Apple differs a bit from most other providers, in that it does not use a shared Client Secret, but rather public/private keypairs.
+Apple differs a bit from most other providers, in that it does not use a  shared Client Secret, but rather public/private keypairs.
 
-The general concept is that a keypair is generated in the Apple Developer portal, and during an OAuth flow, your application is expected to mint a JWT that's signed with that private key. The private key essentially replaces the commonly used "Client Secret" that we see in other OAuth vendors.
+The general concept is that a keypair is generated in the Apple Developer  portal, and during an OAuth flow, your application is expected to mint a JWT that's signed with that private key. The private key essentially  replaces the commonly used "Client Secret" that we see in other OAuth  vendors.
 
-Let's see how to generate a keypair and how to retrieve the Key ID and the private key values that we'll need to configure Apple SSO in Clerk.
+Let's see how to generate a keypair and how to retrieve the Key ID and the private key values that  we'll need to configure Apple SSO in Clerk.
 
 Once again, navigate to the **Certificates, Identifiers & Profiles** page and choose **Keys** from the sidebar. In the next screen, click the blue plus icon.
 
@@ -114,7 +113,7 @@ You'll be taken back to the previous **Register a New Key** page. Click **Contin
 
 ![](./apple/6543e4fb4583a490d7bc635617134667a460a96c-1202x542.png)
 
-You'll be taken in a page titled **Download Your Key**. From here, we want to note down the displayed **Key ID**. We will also download the private key as a file (as the instructions point out, be sure to backup the key in a secure place). Click on **Download** to retrieve the private key.
+You'll be taken in a page titled **Download Your Key**. From here, we want to note down the displayed **Key ID**. We will also download the private key as a file (as the instructions  point out, be sure to backup the key in a secure place). Click on **Download** to retrieve the private key.
 
 ![](./apple/0f21f1aa963ba8435cdd85154597ef2206fbbf4e-1209x494.png)
 
@@ -122,11 +121,13 @@ With the Key ID and our private key at hand, we have everything we need to confi
 
 ### Configuring Email Source for Apple Private Relay users
 
+
+
 > This section concerns only production instances. Development and staging instances are handled for you automatically.
 
-Apple provides a privacy feature called [Hide My Email](https://support.apple.com/en-us/HT210425#hideemail), in which users can choose to Sign In with Apple to your instance, but without revealing their real email addresses. Instead, your instance will receive an app-specific email address, that will nevertheless forward any emails to the real user's address.
+Apple provides a privacy feature called [Hide My Email](https://support.apple.com/en-us/HT210425#hideemail), in which users can choose to Sign In with Apple to your instance, but  without revealing their real email addresses. Instead, your instance  will receive an app-specific email address, that will nevertheless  forward any emails to the real user's address.
 
-To be able to send email properly to users with private addresses, you must o configure an additional setting in the Apple Developer portal.
+To be able to send email properly to users with private addresses, you  must o configure an additional setting in the Apple Developer portal.
 
 First, navigate to Clerk Dashboard, to your *production* instance's **Social Connections** settings page. Click to enable Apple, and in the configuration modal you'll see a read-only setting named **Email Source for Apple Private Email Relay**.
 
@@ -150,17 +151,16 @@ After this, you should now see the email address added to the list, and it shoul
 
 ![](./apple/a26fadc92c4d2206914f38d12d2802fdf4c02b26-1204x447.png)
 
-If it does not appear as Verified yet, don't worry, DNS propagation may take some time to complete. Wait a few minutes (it could even be hours) and click on **Reverify SPF** button from that list.
+If it does not appear as Verified yet, don't worry, DNS propagation may  take some time to complete. Wait a few minutes (it could even be hours)  and click on **Reverify SPF** button from that list.
 
 For more info about Apple's Private Relay service, refer to the following documentation:
 
 - https://support.apple.com/en-us/HT210425#hideemail
-
 - https://help.apple.com/developer-account/?lang=en#/devf822fb8fc
 
 ### Configuring the settings in your instance
 
-If you completed the previous steps of this guide, by now you should have the following information available, all provided by the Apple Developer portal:
+If you completed the previous steps of this guide, by now you should have  the following information available, all provided by the Apple Developer portal:
 
 1. the Apple Team ID
 2. the Apple Services ID
@@ -169,7 +169,7 @@ If you completed the previous steps of this guide, by now you should have the fo
 
 Don't worry, the hard part is over. Now you can go to your instance's settings in the Dashboard, and navigate to the **Social Connections** settings under **User & Authentication**. Find the **Apple** provider from the list, toggle it on and click on the gear icon.
 
-In the modal, you'll see all the corresponding fields that you should paste the aforementioned values into. For the private key file, open it with a text editor and just copy/paste the contents.
+In the modal, you'll see all the corresponding fields that you should  paste the aforementioned values into. For the private key file, open it  with a text editor and just copy/paste the contents. 
 
 After filling in the settings, you'll end up with something roughly like this:
 
@@ -180,5 +180,4 @@ Click **Save** and you should be good to go - you can now navigate to your appli
 ## References
 
 - [Official Sign In with Apple documentation](https://developer.apple.com/documentation/sign_in_with_apple)
-
 - Social Connection (OAuth) with Clerk
