--- a/src/pages/users/authentication-providers/bitbucket.mdx
+++ b/src/pages/users/authentication-providers/bitbucket.mdx
@@ -1,3 +1,57 @@
 # Bitbucket
 
-> This is a stub page. Contents are coming Soon
+### How to set up social connection with Bitbucket
+
+## Overview
+
+Adding social connection with Bitbucket to your app with Clerk is straightforward - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
+
+To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
+
+For production instances, you will need to generate your own Consumer Key and Consumer Secret using your Bitbucket account.
+
+> The purpose of this guide is to help you create a Bitbucket account and a  Bitbucket OAuth Consumer - if you're looking for step-by-step  instructions using Clerk to add social connection (OAuth) to your  application, follow the [Social connection (OAuth) guide](https://clerk.com/docs/authentication/social-connections-oauth).
+
+## Before you start
+
+*   You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+*   You need to have a Bitbucket account. To create one, [click here](https://bitbucket.org/account/signup).
+
+## Configuring Bitbucket social connection
+
+Firstly, you will need to have a Bitbucket workspace.
+
+You can navigate to the [list of all your workspaces](https://bitbucket.org/account/workspaces/) to select an existing workspace or create a new one:
+
+![Bitbucket workspace listing](./bitbucket/005f4b20222a0641a443f750e24d26fd088324db-3360x1896.png)
+
+From there, click on the desired existing workspace or create a new one, then navigate to:
+
+**Settings** > **Oauth Consumers**
+
+![Bitbucket OAuth Consumer list](./bitbucket/b072d3a9f269a46468e651646d08522aa253fdaf-3360x1782.png)
+
+You will need to create a consumer if you don't have one already.
+
+The first important setting for the connection to work is the **Callback URL**. In this field the **Authorized redirect URI** from your Clerk Bitbucket settings should be pasted:
+
+![OAuth consumer creation](./bitbucket/3c3f5f49188f740839a9e0f348ffe4d34a5300c3-3360x1782.png)
+
+The rest of the form fields (Name, Description, URL, Privacy Policy URL,  EULA URL) can be set to match your application settings.
+
+The second important setting is the selection of scopes that Clerk should request from Bitbucket upon connecting.
+
+![Bitbucket OAuth Consumer scopes](./bitbucket/65aee792cbde8564897d5f1110caf090789bf532-1304x942.png)
+
+Under **Account**, the **Email** & **Read** scopes should be enabled so that Clerk can use your basic Bitbucket account info when creating your Clerk user.
+
+After saving the Oauth Consumer, Bitbucket will generate a Consumer Key & Consumer Secret for you. These can be displayed by clicking on the  Consumer entry in your Oauth Consumer list.
+
+You will need to copy:
+
+*   The Bitbucket Client **Key** to the **Client ID** input on ClerkThe Bitbucket
+*   Client **Secret** to the **Client Secret** input on Clerk
+
+![Client ID and Client Secret inputs for Bitbucket connection](./bitbucket/c29fd970821d0746e7637f69bf8f411695638834-1220x784.png)
+
+That's it, now you are all set to sign up & sign in to Clerk with Bitbucket!
